--- a/-lab7/signin.html
+++ b/-lab7/signin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sign in</title>
+    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
       html,
@@ -35,54 +35,24 @@
   </head>
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <main class="form-signin w-100 m-auto">
-      <!-- <form action="signin.php" method="POST"> -->
-        <form name="signin">
+      <form action="signin.php"  method="post">
         <!-- <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-        <div class="alert alert-danger" id="error"> </div>
-
+    
         <div class="form-floating">
           <input type="text" class="form-control" id="floatingEmail" name="username" placeholder="username">
-          <label for="floatingEmail">Username</label>
+          <label for="floatingEmail">username</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="password">
+          <input type="password" class="form-control" id="floatingPassword" name="password"  placeholder="Password">
           <label for="floatingPassword">Password</label>
         </div>
     
-        <button class="btn btn-primary w-100 py-2" type="submit" id="signin" name="signin" onclick="sign_in(event)">Sign in</button>
-        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="signup.html" class="link-danger">Register</a></p>
+        <button class="btn btn-primary w-100 py-2" type="submit" name="signin" >Sign in</button>
+        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!" class="link-danger">Register</a></p>
         <!-- <p class="mt-5 mb-3 text-body-secondary">© 2017–2023</p> -->
       </form>
     </main>
-
-    <script>
-              const error = document.getElementById('error');
-              error.hidden = true;
-              function sign_in(event) {
-                event.preventDefault();
-
-                const body = new FormData(document.forms['signin'],
-                document.getElementById('signin')
-                );
-            fetch('./api/signin.php', 
-            {
-                method: 'POST',
-                body
-            }
-        )
-            .then(response=>{
-                if (response.ok) {
-                    location.href = 'index.php';
-                }  
-                else {
-                    response.text()
-                    .then(data=>error.innerHTML = data);
-                    error.hidden = false;
-                }  
-            });
-        }
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
