--- a/lab7/_signin.html
+++ b/lab7/_signin.html
@@ -1,15 +1,17 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lab 7</title>
 </head>
 <body>
-<form action="signin.php"  method="post">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <button type="submit" name="signin">Sign Up</button>
-</form>
+    <form action="signin.php" method="POST">
+        <input type="text" name="username" placeholder="Username"
+        required>
+        <input type="password" name="password" 
+        placeholder="Password" required>
+        <button type="submit" name="signin">Sign In</button>
+    </form>
 </body>
 </html>
